--- a/BulgariaTimeLine/Views/HomePage.xaml
+++ b/BulgariaTimeLine/Views/HomePage.xaml
@@ -4,32 +4,36 @@
              x:Class="BulgariaTimeLine.HomePage"
              Title="HomePage">
     <VerticalStackLayout>
-        <StackLayout>
-            <!-- Button 1 -->
-            <Frame BackgroundColor="White" CornerRadius="5" HasShadow="True">
-                <Frame.GestureRecognizers>
-                    <TapGestureRecognizer Tapped="Button1Tapped" />
-                </Frame.GestureRecognizers>
-                <StackLayout>
-                    <Label Text="Битката при Онгъла" TextColor="Black" BackgroundColor="White" FontSize="20"/>
-                    <Label Text="680г." FontAttributes="Bold" TextColor="Black" FontSize="30"/>
-                    <Label Text="Description 1" TextColor="Black" />
-                </StackLayout>
-            </Frame>
+        <!-- Chapter Title -->
+        <Label Text="VII Век" FontAttributes="Bold" FontSize="24" TextColor="Black" Margin="10,0,0,10"/>
 
-            <!-- Button 2 -->
-            <Frame BackgroundColor="White" CornerRadius="5" HasShadow="True">
-                <Frame.GestureRecognizers>
-                    <TapGestureRecognizer Tapped="Button2Tapped" />
-                </Frame.GestureRecognizers>
-                <StackLayout>
-                    <Label Text="Button 2" FontAttributes="Bold" TextColor="Black" FontSize="20" />
-                    <Label Text="Title 2" FontAttributes="Bold" TextColor="Black" FontSize="18" />
-                    <Label Text="Description 2" TextColor="Black" />
-                </StackLayout>
-            </Frame>
+        <!-- Button 1 -->
+        <Frame BackgroundColor="White" CornerRadius="5" HasShadow="True" Margin="0,0,0,10">
+            <Frame.GestureRecognizers>
+                <TapGestureRecognizer Tapped="Button1Tapped" />
+            </Frame.GestureRecognizers>
+            <StackLayout>
+                <Label Text="Битката при Онгъла" TextColor="Black" BackgroundColor="White" FontSize="20"/>
+                <Label Text="680г." FontAttributes="Bold" TextColor="Black" FontSize="30"/>
+                <Label Text="Description 1" TextColor="Black" />
+            </StackLayout>
+        </Frame>
 
-            <!-- Add more buttons with titles and descriptions as needed -->
-        </StackLayout>
+        <!-- Line Separator -->
+        <BoxView BackgroundColor="Black" HeightRequest="1" HorizontalOptions="FillAndExpand" Margin="10,0,10,0"/>
+
+        <!-- Button 2 -->
+        <Frame BackgroundColor="White" CornerRadius="5" HasShadow="True" Margin="0,10,0,10">
+            <Frame.GestureRecognizers>
+                <TapGestureRecognizer Tapped="Button2Tapped" />
+            </Frame.GestureRecognizers>
+            <StackLayout>
+                <Label Text="Button 2" FontAttributes="Bold" TextColor="Black" FontSize="20" />
+                <Label Text="Title 2" FontAttributes="Bold" TextColor="Black" FontSize="18" />
+                <Label Text="Description 2" TextColor="Black" />
+            </StackLayout>
+        </Frame>
+
+        <!-- Add more buttons with titles and descriptions as needed -->
     </VerticalStackLayout>
 </ContentPage>
