--- a/BulgariaTimeLine/Views/MainPage.xaml
+++ b/BulgariaTimeLine/Views/MainPage.xaml
@@ -14,14 +14,14 @@
             
             <Frame BackgroundColor="White" CornerRadius="10" Padding="20">
                 <StackLayout>
-                    <Entry Placeholder="Email or Phone" x:Name="UsernameEntry" TextColor="Black" FontSize="16" Margin="0,10,0,10" />
-                    <Entry Placeholder="Password" IsPassword="True" x:Name="PasswordEntry" TextColor="Black" FontSize="16" Margin="0,10,0,10" />
+                    <Entry Placeholder="Име или имейл" x:Name="UsernameEntry" TextColor="Black" FontSize="16" Margin="0,10,0,10" />
+                    <Entry Placeholder="Парола" IsPassword="True" x:Name="PasswordEntry" TextColor="Black" FontSize="16" Margin="0,10,0,10" />
 
-                    <Button Text="Log In" Clicked="OnLoginButtonClicked" BackgroundColor="#32a84c" TextColor="White" CornerRadius="10" FontSize="18" Margin="0,20,0,10" />
+                    <Button Text="Вход" Clicked="OnLoginButtonClicked" BackgroundColor="#32a84c" TextColor="White" CornerRadius="10" FontSize="18" Margin="0,20,0,10" />
                 </StackLayout>
             </Frame>
 
-            <Button Text="Create Account Now!" Clicked="CreateAccountButtonClicked" BackgroundColor="Transparent" TextColor="Black" FontSize="16" HorizontalOptions="Center" Margin="0,20,0,0" />
+            <Button Text="Създайте профил сега!" Clicked="CreateAccountButtonClicked" BackgroundColor="Transparent" TextColor="Black" FontSize="16" HorizontalOptions="Center" Margin="0,20,0,0" />
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
