--- a/BulgariaTimeLine/Views/RegisterPage.xaml
+++ b/BulgariaTimeLine/Views/RegisterPage.xaml
@@ -7,20 +7,20 @@
         <StackLayout Padding="20" VerticalOptions="CenterAndExpand">
 
             <Image Source="register_icon.png" HeightRequest="100" HorizontalOptions="Center" Margin="0,0,0,20" />
-            <Label Text="Register" TextColor="Black" FontSize="32" HorizontalOptions="Center" Margin="0,0,0,20" />
+            <Label Text="Регистрация" TextColor="Black" FontSize="32" HorizontalOptions="Center" Margin="0,0,0,20" />
             <Label Text="Регистрирай се сега! Отнема по-малко от минута." TextColor="Black" FontSize="12" HorizontalOptions="Center" Margin="0,0,0,20" />
 
             <Frame BackgroundColor="White" CornerRadius="10" Padding="20">
                 <StackLayout>
-                    <Entry Placeholder="Email or Phone" x:Name="EmailEntry" TextColor="Black" FontSize="16" Margin="0,10,0,10" />
-                    <Entry Placeholder="Password" IsPassword="True" x:Name="PasswordEntry" TextColor="Black" FontSize="16" Margin="0,10,0,10" />
-                    <Entry Placeholder="Confirm Password" IsPassword="True" x:Name="ConfirmPasswordEntry" TextColor="Black" FontSize="16" Margin="0,10,0,10" />
+                    <Entry Placeholder="Име или имейл" x:Name="EmailEntry" TextColor="Black" FontSize="16" Margin="0,10,0,10" />
+                    <Entry Placeholder="Парола" IsPassword="True" x:Name="PasswordEntry" TextColor="Black" FontSize="16" Margin="0,10,0,10" />
+                    <Entry Placeholder="Потвърди паролата" IsPassword="True" x:Name="ConfirmPasswordEntry" TextColor="Black" FontSize="16" Margin="0,10,0,10" />
 
-                    <Button Text="Register" Clicked="OnRegisterButtonClicked" BackgroundColor="#32a84c" TextColor="White" CornerRadius="10" FontSize="18" Margin="0,20,0,10" />
+                    <Button Text="Регистрация" Clicked="OnRegisterButtonClicked" BackgroundColor="#32a84c" TextColor="White" CornerRadius="10" FontSize="18" Margin="0,20,0,10" />
                 </StackLayout>
             </Frame>
 
-            <Button Text="Already have an account? Log In" Clicked="OnLoginButtonClicked" BackgroundColor="Transparent" TextColor="Black" FontSize="16" HorizontalOptions="Center" Margin="0,20,0,0" />
+            <Button Text="Вече имате акаунт? Влезте!" Clicked="OnLoginButtonClicked" BackgroundColor="Transparent" TextColor="Black" FontSize="16" HorizontalOptions="Center" Margin="0,20,0,0" />
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
