--- a/BulgariaTimeLine/Views/HomePage.xaml
+++ b/BulgariaTimeLine/Views/HomePage.xaml
@@ -2,49 +2,67 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="BulgariaTimeLine.HomePage"
-             Title="HomePage">
+             Shell.NavBarIsVisible="False">
     <VerticalStackLayout x:Name="stackLayout">
-        <SearchBar x:Name="searchBar" Placeholder="Търси" TextChanged="OnSearchTextChanged" Margin="10,0,10,10"/>
+        <Grid Grid.Row="0">
+            <StackLayout Orientation="Horizontal" HorizontalOptions="End" VerticalOptions="EndAndExpand">
+                <Image Source="home_screen_logo.png" WidthRequest="200" HeightRequest="35" Margin="0,10,75,5"/>
+                <!-- Report Bug Button -->
+                <ImageButton Source="report_bug.png" Clicked="ReportBugButtonClicked" BackgroundColor="Transparent" HeightRequest="35" WidthRequest="35" Margin="10,0,10,0"/>
+                <!-- Logout Button -->
+                <ImageButton Source="logout.png" Clicked="LogoutButtonClicked" BackgroundColor="Transparent" HeightRequest="35" WidthRequest="35" Margin="10,0,10,0"/>
+            </StackLayout>
+        </Grid>
+        <Grid Grid.Row="1">
+          <StackLayout>
+            <SearchBar x:Name="searchBar" Placeholder="Търси" TextChanged="OnSearchTextChanged" Margin="10,0,10,10"/>
+            <StackLayout x:Name="notFoundLayout" IsVisible="False" HorizontalOptions="CenterAndExpand">
+                <Label Text="Не намерихме такова събитие в категориите ни!" FontSize="22" TextColor="Black" Margin="25,0,0,0"/>
+                <Image Source="khan_asparuh_error.png" WidthRequest="300" HeightRequest="300" Margin="0,10,0,10"/>
+                <Button Text="Заяви" Clicked="AddButtonClicked" BackgroundColor="#32a84c" TextColor="White" CornerRadius="10" FontSize="18" Margin="0,20,0,10" WidthRequest="100"/>
+            </StackLayout>
+          </StackLayout>
+        </Grid>
         <!-- Chapter Title -->
-        <Label Text="VII Век" FontAttributes="Bold" FontSize="24" TextColor="Black" Margin="10,0,0,10"/>
+            <Label Text="VII Век" FontAttributes="Bold" FontSize="24" TextColor="Black" Margin="10,0,0,10"/>
 
-        <!-- Button 1 -->
-        <Frame BackgroundColor="White" CornerRadius="5" HasShadow="True" Margin="0,0,0,10">
-            <Frame.GestureRecognizers>
-                <TapGestureRecognizer Tapped="btnOngalafight" />
-            </Frame.GestureRecognizers>
-            <StackLayout>
-                <Label Text="Битката при Онгъла" TextColor="Black" BackgroundColor="White" FontSize="20"/>
-                <Label Text="680г." FontAttributes="Bold" TextColor="Black" FontSize="30"/>
-                <Label Text="Тагове: Хан Аспарух, Константин IV" TextColor="Black" />
-            </StackLayout>
-        </Frame>
-        <Frame BackgroundColor="White" CornerRadius="5" HasShadow="True" Margin="0,0,0,10">
-            <Frame.GestureRecognizers>
-                <TapGestureRecognizer Tapped="btnBulgariaCreation" />
-            </Frame.GestureRecognizers>
-            <StackLayout>
-                <Label Text="Създаване на Дунавска България" TextColor="Black" BackgroundColor="White" FontSize="20"/>
-                <Label Text="681г." FontAttributes="Bold" TextColor="Black" FontSize="30"/>
-                <Label Text="Тагове: Хан Аспарух, Плиска, прабългари" TextColor="Black" />
-            </StackLayout>
-        </Frame>
+            <!-- Button 1 -->
+            <Frame BackgroundColor="White" CornerRadius="5" HasShadow="True" Margin="0,0,0,10">
+                <Frame.GestureRecognizers>
+                    <TapGestureRecognizer Tapped="btnOngalafight" />
+                </Frame.GestureRecognizers>
+                <StackLayout>
+                    <Label Text="Битката при Онгъла" TextColor="Black" BackgroundColor="White" FontSize="20"/>
+                    <Label Text="680г." FontAttributes="Bold" TextColor="Black" FontSize="30"/>
+                    <Label Text="Тагове: Хан Аспарух, Константин IV" TextColor="Black" />
+                </StackLayout>
+            </Frame>
+            <Frame BackgroundColor="White" CornerRadius="5" HasShadow="True" Margin="0,0,0,10">
+                <Frame.GestureRecognizers>
+                    <TapGestureRecognizer Tapped="btnBulgariaCreation" />
+                </Frame.GestureRecognizers>
+                <StackLayout>
+                    <Label Text="Създаване на Дунавска България" TextColor="Black" BackgroundColor="White" FontSize="20"/>
+                    <Label Text="681г." FontAttributes="Bold" TextColor="Black" FontSize="30"/>
+                    <Label Text="Тагове: Хан Аспарух, Плиска, прабългари" TextColor="Black" />
+                </StackLayout>
+            </Frame>
 
-        <!-- Line Separator -->
-        <BoxView BackgroundColor="Black" HeightRequest="1" HorizontalOptions="FillAndExpand" Margin="10,0,10,0"/>
+            <!-- Line Separator -->
+            <BoxView BackgroundColor="Black" HeightRequest="1" HorizontalOptions="FillAndExpand" Margin="10,0,10,0"/>
 
-        <Label Text="VIII Век" FontAttributes="Bold" FontSize="24" TextColor="Black" Margin="10,0,0,10"/>
+            <Label Text="VIII Век" FontAttributes="Bold" FontSize="24" TextColor="Black" Margin="10,0,0,10"/>
 
-        <!-- Button 2 -->
-        <Frame BackgroundColor="White" CornerRadius="5" HasShadow="True" Margin="0,10,0,10">
-            <Frame.GestureRecognizers>
-                <TapGestureRecognizer Tapped="Button2Tapped" />
-            </Frame.GestureRecognizers>
-            <StackLayout>
-                <Label Text="Button 2" FontAttributes="Bold" TextColor="Black" FontSize="20" />
-                <Label Text="Title 2" FontAttributes="Bold" TextColor="Black" FontSize="18" />
-                <Label Text="Description 2" TextColor="Black" />
-            </StackLayout>
-        </Frame>
-    </VerticalStackLayout>
+            <!-- Button 2 -->
+            <Frame BackgroundColor="White" CornerRadius="5" HasShadow="True" Margin="0,10,0,10">
+                <Frame.GestureRecognizers>
+                    <TapGestureRecognizer Tapped="Button2Tapped" />
+                </Frame.GestureRecognizers>
+                <StackLayout>
+                    <Label Text="Button 2" FontAttributes="Bold" TextColor="Black" FontSize="20" />
+                    <Label Text="Title 2" FontAttributes="Bold" TextColor="Black" FontSize="18" />
+                    <Label Text="Description 2" TextColor="Black" />
+                </StackLayout>
+            </Frame>
+        </VerticalStackLayout>
 </ContentPage>
