ReportPage works, and sends emails successfully

--- a/BulgariaTimeLine/Views/ReportPage.xaml
+++ b/BulgariaTimeLine/Views/ReportPage.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="BulgariaTimeLine.ReportPage"
-             Title="ReportPage">
+             Title="Докладвайте проблем">
     <VerticalStackLayout>
         <StackLayout Margin="20">
             <Label Text="Докладвайте проблем" FontSize="Large" HorizontalOptions="Center" Margin="0,30,0,20"/>
@@ -10,16 +10,16 @@
 
             <Frame BackgroundColor="White" CornerRadius="10" Padding="20">
                 <StackLayout>
-            <Label Text="Имейл:" FontSize="20"/>
+            <Label Text="Имейл:" FontSize="16"/>
             <Entry x:Name="EmailEntry" Placeholder="Въведете имейл" Keyboard="Email" />
 
-            <Label Text="Тема:" FontSize="20"/>
+            <Label Text="Тема:" FontSize="16"/>
             <Entry x:Name="TitleEntry" Placeholder="Въведете тема" />
 
-            <Label Text="Описание:" FontSize="20"/>
+            <Label Text="Описание:" FontSize="16"/>
             <Editor x:Name="DescriptionEditor" Placeholder="Въведте описание на проблема" HeightRequest="100" />
 
-            <Button Text="Изпратете заявка" Clicked="OnSubmitClicked" BackgroundColor="#4CAF50" TextColor="White" Margin="0,20,0,0"/>
+                    <Button Text="Изпратете заявка" Command="{Binding SubmitCommand}" BackgroundColor="#4CAF50" TextColor="White" Margin="0,20,0,0"/>
                 </StackLayout>
             </Frame>
         </StackLayout>
