--- a/BulgariaTimeLine/Views/BulgariaCreationPage.xaml
+++ b/BulgariaTimeLine/Views/BulgariaCreationPage.xaml
@@ -50,6 +50,18 @@
        HeightRequest="215"
        Margin="0,0,0,10"/>
 
+            <BoxView BackgroundColor="Black" HeightRequest="1" HorizontalOptions="FillAndExpand" Margin="10,15,10,10"/>
+            <Label Text="Ако искате да разберете повече по темата, може да гледате видеото на 'Българска история'!"
+               FontSize="18"
+               FontAttributes="Bold"
+               Margin="0,0,0,20"
+               TextColor="Black"/>
+            
+            <WebView>
+                <WebView.Source>
+                    <HtmlWebViewSource Html="{Binding YouTubeHtml}" />
+                </WebView.Source>
+            </WebView>
         </StackLayout>
     </ScrollView>
 </ContentPage>
