--- a/BulgariaTimeLine/Views/OngalaFightPage.xaml
+++ b/BulgariaTimeLine/Views/OngalaFightPage.xaml
@@ -53,6 +53,18 @@
        LineBreakMode="WordWrap"
        TextColor="Black"/>
 
+            <BoxView BackgroundColor="Black" HeightRequest="1" HorizontalOptions="FillAndExpand" Margin="10,15,10,10"/>
+            <Label Text="Ако искате да разберете повече по темата, може да гледате видеото на 'Българска история'!"
+               FontSize="18"
+               FontAttributes="Bold"
+               Margin="0,0,0,20"
+               TextColor="Black"/>
+        
+            <WebView>
+                <WebView.Source>
+                    <HtmlWebViewSource Html="{Binding YouTubeHtml}" />
+                </WebView.Source>
+            </WebView>
 
         </StackLayout>
    </ScrollView>
