--- a/BulgariaTimeLine/Views/OngalaFightPage.xaml
+++ b/BulgariaTimeLine/Views/OngalaFightPage.xaml
@@ -33,7 +33,8 @@
             <Label Text="През 680 г., хан Аспарух, използвайки войните на Византия с арабите, преминава река Дунав и нахлува в Малка Скития. Императорът Константин IV организира поход срещу прабългарските племена."
        FontSize="18"
        LineBreakMode="WordWrap"
-       TextColor="Black"/>
+       TextColor="Black"
+       Margin="0,0,0,20"/>
 
             <Label Text="Военни действия:"
        FontAttributes="Bold"
@@ -42,7 +43,8 @@
             <Label Text="Аспарух се установява в Мизия, а войските на Константин IV започват действия. Блатистата местност намалява силата на удара. Прабългарската армия се оттегля към укрепление на остров Певки. Византийците обсаждат лагера, но императорът напуска бойното поле, повлиявайки негативно духа на войската."
        FontSize="18"
        LineBreakMode="WordWrap"
-       TextColor="Black"/>
+       TextColor="Black"
+       Margin="0,0,0,20"/>
 
             <Label Text="Следствия:"
        FontAttributes="Bold"
