--- a/BulgariaTimeLine/Views/HomePage.xaml
+++ b/BulgariaTimeLine/Views/HomePage.xaml
@@ -3,27 +3,28 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="BulgariaTimeLine.HomePage"
              Shell.NavBarIsVisible="False">
-    <VerticalStackLayout x:Name="stackLayout">
-        <Grid Grid.Row="0">
-            <StackLayout Orientation="Horizontal" HorizontalOptions="End" VerticalOptions="EndAndExpand">
-                <Image Source="home_screen_logo.png" WidthRequest="200" HeightRequest="35" Margin="0,10,75,5"/>
-                <!-- Report Bug Button -->
-                <ImageButton Source="report_bug.png" Clicked="ReportBugButtonClicked" BackgroundColor="Transparent" HeightRequest="35" WidthRequest="35" Margin="10,0,10,0"/>
-                <!-- Logout Button -->
-                <ImageButton Source="logout.png" Clicked="LogoutButtonClicked" BackgroundColor="Transparent" HeightRequest="35" WidthRequest="35" Margin="10,0,10,0"/>
-            </StackLayout>
-        </Grid>
-        <Grid Grid.Row="1">
-          <StackLayout>
-            <SearchBar x:Name="searchBar" Placeholder="Търси" TextChanged="OnSearchTextChanged" Margin="10,0,10,10"/>
-            <StackLayout x:Name="notFoundLayout" IsVisible="False" HorizontalOptions="CenterAndExpand">
-                <Label Text="Не намерихме такова събитие в категориите ни!" FontSize="22" TextColor="Black" Margin="25,0,0,0"/>
-                <Image Source="khan_asparuh_error.png" WidthRequest="300" HeightRequest="300" Margin="0,10,0,10"/>
-                <Button Text="Заяви" Clicked="AddButtonClicked" BackgroundColor="#32a84c" TextColor="White" CornerRadius="10" FontSize="18" Margin="0,20,0,10" WidthRequest="100"/>
-            </StackLayout>
-          </StackLayout>
-        </Grid>
-        <!-- Chapter Title -->
+    <ScrollView>
+        <VerticalStackLayout x:Name="stackLayout">
+            <Grid Grid.Row="0">
+                <StackLayout Orientation="Horizontal" HorizontalOptions="End" VerticalOptions="EndAndExpand">
+                    <Image Source="home_screen_logo.png" WidthRequest="200" HeightRequest="35" Margin="0,10,75,5"/>
+                    <!-- Report Bug Button -->
+                    <ImageButton Source="report_bug.png" Clicked="ReportBugButtonClicked" BackgroundColor="Transparent" HeightRequest="35" WidthRequest="35" Margin="10,0,10,0"/>
+                    <!-- Logout Button -->
+                    <ImageButton Source="logout.png" Clicked="LogoutButtonClicked" BackgroundColor="Transparent" HeightRequest="35" WidthRequest="35" Margin="10,0,10,0"/>
+                </StackLayout>
+            </Grid>
+            <Grid Grid.Row="1">
+                <StackLayout>
+                    <SearchBar x:Name="searchBar" Placeholder="Търси" TextChanged="OnSearchTextChanged" Margin="10,0,10,10"/>
+                    <StackLayout x:Name="notFoundLayout" IsVisible="False" HorizontalOptions="CenterAndExpand">
+                        <Label Text="Не намерихме такова събитие в категориите ни!" FontSize="22" TextColor="Black" Margin="25,0,0,0"/>
+                        <Image Source="khan_asparuh_error.png" WidthRequest="300" HeightRequest="300" Margin="0,10,0,10"/>
+                        <Button Text="Заяви" Clicked="AddButtonClicked" BackgroundColor="#32a84c" TextColor="White" CornerRadius="10" FontSize="18" Margin="0,20,0,10" WidthRequest="100"/>
+                    </StackLayout>
+                </StackLayout>
+            </Grid>
+            <!-- Chapter Title -->
             <Label Text="VII Век" FontAttributes="Bold" FontSize="24" TextColor="Black" Margin="10,0,0,10"/>
 
             <!-- Button 1 -->
@@ -58,21 +59,36 @@
                 <Frame.GestureRecognizers>
                     <TapGestureRecognizer Tapped="btnAnhialoBattle" />
                 </Frame.GestureRecognizers>
-               <StackLayout>
-                <Label Text="Битката при Анхиало" TextColor="Black" BackgroundColor="White" FontSize="20"/>
-                <Label Text="708г." FontAttributes="Bold" TextColor="Black" FontSize="30"/>
-                <Label Text="Тагове: Хан Тервел, Византия, Юстиниан II, Загоре" TextColor="Black" />
-               </StackLayout>
+                <StackLayout>
+                    <Label Text="Битката при Анхиало" TextColor="Black" BackgroundColor="White" FontSize="20"/>
+                    <Label Text="708г." FontAttributes="Bold" TextColor="Black" FontSize="30"/>
+                    <Label Text="Тагове: Хан Тервел, Византия, Юстиниан II, Загоре" TextColor="Black" />
+                </StackLayout>
             </Frame>
-        <Frame BackgroundColor="White" CornerRadius="5" HasShadow="True" Margin="0,10,0,10">
-            <Frame.GestureRecognizers>
-                <TapGestureRecognizer Tapped="btnConstantinopoleSiege" />
-            </Frame.GestureRecognizers>
-            <StackLayout>
-                <Label Text="Обсада на Константинопол" TextColor="Black" BackgroundColor="White" FontSize="20"/>
-                <Label Text="717-718г." FontAttributes="Bold" TextColor="Black" FontSize="30"/>
-                <Label Text="Тагове: Хан Тервел, Византия, Константинопол, араби" TextColor="Black" />
-            </StackLayout>
-        </Frame>
-    </VerticalStackLayout>
+            <Frame BackgroundColor="White" CornerRadius="5" HasShadow="True" Margin="0,10,0,10">
+                <Frame.GestureRecognizers>
+                    <TapGestureRecognizer Tapped="btnConstantinopoleSiege" />
+                </Frame.GestureRecognizers>
+                <StackLayout>
+                    <Label Text="Обсада на Константинопол" TextColor="Black" BackgroundColor="White" FontSize="20"/>
+                    <Label Text="717-718г." FontAttributes="Bold" TextColor="Black" FontSize="30"/>
+                    <Label Text="Тагове: Хан Тервел, Византия, Константинопол, араби" TextColor="Black" />
+                </StackLayout>
+            </Frame>
+            <BoxView BackgroundColor="Black" HeightRequest="1" HorizontalOptions="FillAndExpand" Margin="10,0,10,0"/>
+
+            <Label Text="IX Век" FontAttributes="Bold" FontSize="24" TextColor="Black" Margin="10,0,0,10"/>
+
+            <Frame BackgroundColor="White" CornerRadius="5" HasShadow="True" Margin="0,10,0,10">
+                <Frame.GestureRecognizers>
+                    <TapGestureRecognizer Tapped="btnVerbiPassBattle"/>
+                </Frame.GestureRecognizers>
+                <StackLayout>
+                    <Label Text="Битката при Върбишкия проход" TextColor="Black" BackgroundColor="White" FontSize="20"/>
+                    <Label Text="811г." FontAttributes="Bold" TextColor="Black" FontSize="30"/>
+                    <Label Text="Тагове: Хан Крум, Византия, Никифор I, Върбишки проход" TextColor="Black" />
+                </StackLayout>
+            </Frame>
+        </VerticalStackLayout>
+    </ScrollView>
 </ContentPage>
