Desgin improvements in the Admin Panel and the events

--- a/BulgariaTimeLine/Views/AdminPage.xaml
+++ b/BulgariaTimeLine/Views/AdminPage.xaml
@@ -2,8 +2,17 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="BulgariaTimeLine.AdminPage"
-             Title="AdminPage">
+             Shell.NavBarIsVisible="False">
     <StackLayout Padding="20">
+        <Grid Grid.Row="0">
+            <StackLayout Orientation="Horizontal" HorizontalOptions="End" VerticalOptions="EndAndExpand">
+                <Image Source="home_screen_logo.png" WidthRequest="200" HeightRequest="35" Margin="0,10,130,5"/>
+                <!-- Logout Button -->
+                <ImageButton Source="logout.png" Clicked="LogoutButtonClicked" BackgroundColor="Transparent" HeightRequest="35" WidthRequest="35" Margin="10,0,10,0"/>
+            </StackLayout>
+        </Grid>
+        <Label Text="Администраторски панел" FontSize="20" FontAttributes="Bold" HorizontalOptions="Center" Margin="0,20,0,10"/>
+        <BoxView BackgroundColor="Black" HeightRequest="1" HorizontalOptions="FillAndExpand" Margin="10,0,10,0"/>
         <!-- Entry for Username -->
         <Entry x:Name="usernameEntryField" Placeholder="Име или имейл" Text="{Binding Username}" Margin="0,0,0,10" />
 
