--- a/BulgariaTimeLine/Views/AnhialoBattlePage.xaml
+++ b/BulgariaTimeLine/Views/AnhialoBattlePage.xaml
@@ -2,6 +2,7 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="BulgariaTimeLine.AnhialoBattlePage"
+             Shell.BackgroundColor="#32a84c"
              Title="Битката при Анхиало">
     <ScrollView>
         <StackLayout Padding="16">
