--- a/BulgariaTimeLine/Views/EventView.xaml
+++ b/BulgariaTimeLine/Views/EventView.xaml
@@ -2,11 +2,61 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="BulgariaTimeLine.EventView"
-             Title="EventView">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
+             Shell.BackgroundColor="#32a84c"
+             Title="{Binding Event.Title}">
+    <ScrollView>
+        <StackLayout Padding="16">
+
+
+            <Label Text="{Binding Event.Title}"
+               FontSize="28"
+               FontAttributes="Bold"
+               Margin="0,0,0,10"
+               TextColor="Black"/>
+
+            <Label Text="{Binding Event.Year}"
+               FontSize="24"
+               FontAttributes="Bold"
+               Margin="0,0,0,10"
+               TextColor="Black"/>
+
+
+            <Image Source="{Binding Event.Image}" 
+               Aspect="AspectFill"
+               HeightRequest="200"
+               Margin="0,0,0,10"/>
+
+
+            <Label Text="{Binding Event.Text}"
+            FontSize="18"
+            LineBreakMode="WordWrap"
+            TextColor="Black"
+            Margin="0,0,0,20"/>
+
+
+            <!--<Image Source="battle_of_anchialus_map.png" 
+       Aspect="AspectFit"
+       WidthRequest="300"
+       HeightRequest="215"
+       Margin="0,0,0,10"/>
+            <Image Source="battle_map_708.jpg" 
+       Aspect="AspectFit"
+       WidthRequest="300"
+       HeightRequest="215"
+       Margin="0,0,0,10"/>-->
+
+            <BoxView BackgroundColor="Black" HeightRequest="1" HorizontalOptions="FillAndExpand" Margin="10,15,10,10"/>
+            <Label Text="Ако искате да разберете повече по темата, може да гледате видеото на 'Българска история'!"
+               FontSize="18"
+               FontAttributes="Bold"
+               Margin="0,0,0,20"
+               TextColor="Black"/>
+
+            <WebView>
+                <WebView.Source>
+                    <HtmlWebViewSource Html="{Binding YouTubeHtml}" />
+                </WebView.Source>
+            </WebView>
+        </StackLayout>
+    </ScrollView>
 </ContentPage>
