--- a/BulgariaTimeLine/Views/HomePage.xaml
+++ b/BulgariaTimeLine/Views/HomePage.xaml
@@ -25,20 +25,31 @@
                 </StackLayout>
             </Grid>
 
-            <ListView x:Name="eventListView" ItemsSource="{Binding Events}" HasUnevenRows="True">
-                <ListView.ItemTemplate Margin="0,0,0,10">
+            <ListView x:Name="eventListView" ItemsSource="{Binding CenturyEvents}" HasUnevenRows="True">
+                <ListView.ItemTemplate>
                     <DataTemplate>
                         <ViewCell>
-                            <Border BackgroundColor="White" Padding="5">
-                                <Border.GestureRecognizers>
-                                    <TapGestureRecognizer CommandParameter="{Binding EventId}" Tapped="onEventSelected"/>
-                                </Border.GestureRecognizers>
-                                <StackLayout>
-                                    <Label Text="{Binding Title}" TextColor="Black" BackgroundColor="White" FontSize="20"/>
-                                    <Label Text="{Binding Year}" FontAttributes="Bold" TextColor="Black" FontSize="30"/>
-                                    <Label Text="{Binding Tags}" TextColor="Black" />
-                                </StackLayout>
-                            </Border>
+                            <StackLayout>
+                                <!-- Display Century -->
+                                <Label Text="{Binding Century}" TextColor="Black" BackgroundColor="White" FontSize="20"/>
+
+                                <CollectionView ItemsSource="{Binding Events}">
+                                    <CollectionView.ItemTemplate>
+                                        <DataTemplate>
+                                            <Border BackgroundColor="White" Padding="5">
+                                                <Border.GestureRecognizers>
+                                                    <TapGestureRecognizer CommandParameter="{Binding EventId}" Tapped="onEventSelected"/>
+                                                </Border.GestureRecognizers>
+                                                <StackLayout BackgroundColor="White" Padding="5">
+                                                    <Label Text="{Binding Title}" TextColor="Black" FontSize="20"/>
+                                                    <Label Text="{Binding Year}" FontAttributes="Bold" TextColor="Black" FontSize="30"/>
+                                                    <Label Text="{Binding Tags}" TextColor="Black"/>
+                                                </StackLayout>
+                                            </Border>
+                                        </DataTemplate>
+                                    </CollectionView.ItemTemplate>
+                                </CollectionView>
+                            </StackLayout>
                         </ViewCell>
                     </DataTemplate>
                 </ListView.ItemTemplate>
