--- a/BulgariaTimeLine/Views/EditorPage.xaml
+++ b/BulgariaTimeLine/Views/EditorPage.xaml
@@ -2,7 +2,8 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="BulgariaTimeLine.EditorPage"
-             Title="EditorPage">
+             Shell.BackgroundColor="#00b5f9"
+             Title="Редакторски панел">
   <ScrollView>
     <StackLayout Padding="20">
         <Label Text="Редакторски панел" FontSize="20" FontAttributes="Bold" HorizontalOptions="Center" Margin="0,20,0,10"/>
